# back/src/modules/event/event.routes.ts
@@ -8,6 +8,7 @@ const router = Router();
 router.get('/all', isAuthenticated, eventController.getEvents);
 router.get('/requests/all', isAuthenticated, eventController.getRequests);
 router.get('/request/:requestUid', isAuthenticated, eventController.getRequest);
+router.get('/info/:eventUid', isAuthenticated, eventController.getEvent);
 
 router.post('/create/request', isAuthenticated, eventController.createRequest);
 
